--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,12 +1,12 @@
         .desc { color:#403B33;}
         .desc a {color:#403B33;}
 
-        .dropdown_cat dd, .dropdown_cat dt, .dropdown_cat ul { margin:0px; padding:0px; z-index:1; }
-        .dropdown_cat dd { position:relative; }
-        .dropdown_cat a, .dropdown_cat a:visited { color:#403B33; text-decoration:none; outline:none;}
-        .dropdown_cat a:hover { color:#403B33;}
-        .dropdown_cat dt a:hover { color:#403B33; }
-        .dropdown_cat dt a {background:#FEFEFE; 
+        .dropdown dd, .dropdown dt, .dropdown ul { margin:0px; padding:0px; z-index:1; }
+        .dropdown dd { position:relative; }
+        .dropdown a, .dropdown a:visited { color:#403B33; text-decoration:none; outline:none;}
+        .dropdown a:hover { color:#403B33;}
+        .dropdown dt a:hover { color:#403B33; }
+        .dropdown dt a {background:#FEFEFE; 
 		display:block; 
 		height:36px;
 		text-align:center;
@@ -18,11 +18,11 @@
 		font-size:18px;
 		}
 
-        .dropdown_cat dt a span {
+        .dropdown dt a span {
 		cursor:pointer; display:block; padding:5px; 
 		}
 
-        .dropdown_cat dd ul { background:#FEFEFE none repeat scroll 0 0;
+        .dropdown dd ul { background:#FEFEFE none repeat scroll 0 0;
 		 color:#C5C0B0; display:none;
 		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		font-size:18px;
@@ -31,46 +31,14 @@
 		-moz-border-radius:8px;
 		border-radius: 8px;}
 		
-        .dropdown_cat span.value { display:none;}
-        .dropdown_cat dd ul li a { padding:5px; display:block;}
-        .dropdown_cat dd ul li a:hover { background-color:#D8F0F0;}
-        .dropdown_cat img.flag { border:none; vertical-align:middle; margin-left:10px; }
+        .dropdown span.value { display:none;}
+        .dropdown dd ul li a { padding:5px; display:block;}
+        .dropdown dd ul li a:hover { background-color:#D8F0F0;}
+        .dropdown img.flag { border:none; vertical-align:middle; margin-left:10px; }
 
-		.dropdown_time dd, .dropdown_time dt, .dropdown_time ul { margin:0px; padding:0px; z-index:1; }
-        .dropdown_time dd { position:relative; }
-        .dropdown_time a, .dropdown_time a:visited { color:#403B33; text-decoration:none; outline:none;}
-        .dropdown_time a:hover { color:#403B33;}
-        .dropdown_time dt a:hover { color:#403B33; }
-        .dropdown_time dt a {background:#FEFEFE; 
-		display:block; 
-		height:36px;
-		text-align:center;
-		-moz-border-radius-bottomright: 8px;
-		border-bottom-right-radius: 8px;
-		-moz-border-radius-bottomleft: 8px;
-		border-bottom-left-radius: 8px;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-size:18px;
+		.dropdown{
+			margin: 0px;
 		}
-
-        .dropdown_time dt a span {
-		cursor:pointer; display:block; padding:5px; 
-		}
-
-        .dropdown_time dd ul { background:#FEFEFE none repeat scroll 0 0;
-		 color:#C5C0B0; display:none;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-size:18px;
-		left:0px; padding:5px 0px; position:absolute; top:2px; width:auto; 
-		min-width:170px; list-style:none;
-		-moz-border-radius:8px;
-		border-radius: 8px;}
-		
-        .dropdown_time span.value { display:none;}
-        .dropdown_time dd ul li a { padding:5px; display:block;}
-        .dropdown_time dd ul li a:hover { background-color:#D8F0F0;}
-        .dropdown_time img.flag { border:none; vertical-align:middle; margin-left:10px; }
-        
 
         
 
