--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,20 @@ a.navlist_selected{
 	margin:8px;
 }
 
-label
+.pmlabel
+{
+	width: 100px;
+	float: left;
+	text-align: right;
+	margin-right: 0.5em;
+	margin-top:5px;
+	display: block;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size:12px;
+	color: #403B33;
+}
+
+.passwordlabel
 {
 	width: 100px;
 	float: left;
@@ -799,6 +812,16 @@ display: block;
 margin-top:5px;
 font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 font-size:16px;
+}
+
+.profile_password{
+margin-top:5px;
+height:27px;
+width:150px;
+border: 1px solid #777777;
+font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+color: #403B33;
+font-size:18px;
 }
 
 .pmtext_username{
