--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,11 @@ div.pmcontainer {
 .pad8{
 	padding:8px;
 }
-
+div.comments{
+	
+	background: blue;
+	
+}
 div.commentcontainer {
 	display:inline-block;
 	background: #FEFEFE;
@@ -558,7 +562,7 @@ div.commentcontainer {
 	border:8px solid #A8D8D8;
 	-moz-border-radius:8px;
 	border-radius: 8px;
-	margin-left:2px;
+	margin-left:0px;
 	margin-right:2px;
 	margin-top:3px;
 	min-width:300px;
@@ -902,7 +906,7 @@ height:40px;
 	-moz-border-radius:8px;
 	border-radius: 8px;
 	width:370px;
-	
+	margin-top:3px;
 	
 }
 
