--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,11 @@ td.title_col{
 	position:relative;
 	text-align:center;
 }
+
+.relative{
+	position:relative;
+	
+}
 .uploadlink {
 	display:inline-block;
 	
@@ -899,6 +904,15 @@ height:40px;
 	
 }
 
+.lolbucks{
+display:inline;
+font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+color: #0B8700;
+font-size:40px;
+margin-left: 5px;
+width: 90%;
+
+}
 .top_comment_container{
 
 	background: #FEFEFE;
